# send-to-vrc

./: .gitignore  .prettierignore  .prettierrc.js  Cargo.toml  Install.nsh  LICENSE  README.md  about.hbs  build.rs  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
.storybook/: main.ts  preview.tsx
public/: default_config.json  error.html  launch.html  launch.js  recovery.html  recovery.js
public/translation/: available.json  en.json  ja.json
scripts/: bundle-zip.js  fix-version.js  prepare.js
src/: AboutMode.tsx  App.tsx  AppContainer.tsx  BackButton.tsx  BoundingSelector.tsx  Button.tsx  ButtonCard.tsx  Card.tsx  DebugMode.tsx  FileDrop.tsx  FilePicker.tsx  FilePickerButton.tsx  FilePickerComponent.tsx  GraphicButton.tsx  HeroImage.tsx  ImageFilePicker.tsx  ImageFilePickerComponent.tsx  LimitedText.tsx  MainMode.tsx  RegisterOverlay.tsx  RewriteLangTag.tsx  SendMode.tsx  SendPageComponent.tsx  SendToImageViewerMode.tsx  SendToVRChatPrintMode.tsx  SendToVideoPlayerMode.tsx  StatusLineComponent.tsx  Switch.tsx  atoms.ts  bindings.gen.ts  config.rs  config.ts  convertFreshFileSrc.ts  extractImageProps.ts  file-handler.ts  i18n.ts  index.scss  ipc.ts  logic.rs  main.rs  (+9 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/misc/: about.hbs  about.toml
src-tauri/resources/: THIRDPARTY.ffmpeg
src-tauri/src/: app_data.rs  build_config.example.rs  capture.rs  config.rs  crypt.rs  error.rs  file.rs  image.rs  image_to_image.rs  image_to_video.rs  launch_options.rs  lib.rs  main.rs  prelude.rs  progress.rs  uploader.rs  vrchat_print.rs
src-tauri/windows/: hooks.nsh
src/components/i18n/: RewriteLangTag.tsx
src/components/layout/: AppContainer.tsx  Container.tsx  ErrorComponent.tsx
src/components/navigation/: BackButton.tsx  HomeButton.tsx  NavigationBar.tsx
src/components/ui/: BoundingSelector.tsx  Button.tsx  ButtonCard.tsx  Card.tsx  GraphicButton.tsx  HeroImage.tsx  Input.tsx  Overlay.tsx  Select.tsx  Spacer.tsx  SpacerInline.tsx  Switch.tsx  color-mode.tsx  tooltip.tsx
src/features/file/: FileDrop.tsx  FilePickerButton.tsx  file-handler.ts
src/features/send-image/: ImageFilePicker.tsx  ImageFilePickerComponent.tsx  RegisterOverlay.tsx  SendPageComponent.tsx  SendToImageViewerMode.tsx  SendToVRChatPrintMode.tsx  SendToVideoPlayerMode.tsx  StatusLineComponent.tsx  VRChatLoginOverlay.tsx  extractImageProps.ts  useImageValidity.ts  useProgressMessage.ts
src/features/send-image/stores/: vrchat-login.ts
src/hooks/: useBoundingSelectorState.ts  useClientBoundingBox.tsx  useClipboard.ts  useFilePickerDialog.ts
src/routes/: __root.tsx  about.tsx  capture.tsx  config.tsx  debug.tsx  index.tsx  launch.tsx  send.tsx
src/stores/: args.ts  atoms.ts  config.ts  router.ts  task.ts
src/stories/: BoundingSelector.stories.tsx  Button.stories.ts  ButtonCard.stories.tsx  FilePickerComponent.stories.tsx  GraphicButton.stories.ts  Header.stories.ts  HeroImage.stories.ts  ImageFilePickerComponent.stories.ts  LimitedText.stories.tsx  Page.stories.ts  SendPageComponent.stories.tsx  SendToImageViewerMode.stories.tsx  SendToVideoPlayerMode.stories.tsx  StatusLineComponent.stories.tsx
src/ui/: font.rs
