[package]
name = "send-to-vrc"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
chrono = "0.4.41"
cookie = "0.18.1"
dirs = "6.0.0"
eframe = "0.32.1"
egui = "0.32.1"
epaint = "0.32.1"
font-kit = "0.14.3"
futures = "0.3.31"
image = { version = "0.25.6" }
log = "0.4.27"
reqwest = { version = "0.12.23", features = ["blocking", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
simple_logger = "5.0.0"
tokio = "1.47.1"
urlencoding = "2.1.3"
