[package]
name = "send-to-vrc"
version = "1.3.1" # @appversion
description = "An application for uploading images to see in VRChat."
authors = ["cathiecode"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "send_to_vrc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny-skia = "0.11.4"
image = "0.25.8"
tokio = { version = "1.47.1", features = ["macros", "process", "rt", "tokio-macros"] }
reqwest = { version = "0.12.23", features = ["cookies", "json", "multipart", "stream"] }
chrono = "0.4.42"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4.28"
tauri-plugin-clipboard-manager = "2"
anyhow = "1.0.100"
thiserror = "2.0.17"
specta = { version = "=2.0.0-rc.22", features = ["serde", "serde_json"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-os = "2"
windows-capture = "2.0.0-alpha.7"
genawaiter = "0.99.1"
base64 = "0.22.1"
urlencoding = "2.1.3"
dotenvy = "0.15.7"
env_logger = "0.11.8"
windows = { version = "0.62.2", features = ["Win32_Security_Cryptography"] }
ini = "1.3.0"
